<resources>
    <string name="app_name">ProRamadan</string>

    <string name="empty">empty</string>

    <string name="about_program_settings">О приложении</string>
    <string name="report_an_error_settings">Сообщить об ошибке</string>
    <string name="donate_settings">Помочь проекту</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="share_settings">Рассказать друзьям</string>
    <string name="feedback_settings">Обратная связь</string>
    <string name="other_apps">Другие приложения</string>
    <string name="night_mode">Ночной режим</string>

    <string name="no_play_market">Не удается открыть Play Маркет. Проверьте, установлен ли Маркет на вашем устройстве. Попробуйте позже.</string>
    <string name="share_text">Рекомендую скачать приложение с разбором основных вопросов о месяце Рамадан</string>
    <string name="play_market_url">https://play.google.com/store/apps/details?id=com.maratabumalik.proramadan</string>
    <string name="developer_url">https://play.google.com/store/apps/developer?id=MaratAbuMalik</string>

    <string name="select_sum">Выберите сумму для пожертвования</string>
    <string name="thanks">Джазакаллаху хайран! \\nДа воздаст Вам Аллах благом!</string>

</resources>
