<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_menu">

    <item android:id="@+id/donate_settings"
        android:title="@string/donate_settings"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item android:id="@+id/rate_app"
        android:title="@string/rate_app"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/share_settings"
        android:title="@string/share_settings"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item android:id="@+id/feedback_settings"
        android:title="@string/feedback_settings"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item android:id="@+id/other_apps"
        android:title="@string/other_apps"
        android:orderInCategory="5"
        app:showAsAction="never"/>
    <item
        android:id="@+id/night_mode"
        android:checkable="true"
        android:title="@string/night_mode"
        android:orderInCategory="6"/>
</menu>